chore: Worked on request payload validation
